--- a/manuscript/simple_search.tex
+++ b/manuscript/simple_search.tex
@@ -78,7 +78,7 @@ Before fitting the model, $n_D$ was scaled to (0, 1), and the following priors w
 
 More details about fitting. 
 
-Before analysing the results, we verified that all $R\hat < 1.01$ and $n_eff>500$(???) for all parameters. 
+Before analysing the results, we verified that all $R\hat < 1.01$ and $n_{eff}>500$(???) for all parameters. 
 
 \section{Results}
 
